--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
+	implementation project(':webclient')
 	implementation project(':reactive-web')
 	implementation 'org.reactivecommons.utils:object-mapper:0.1.0'
+    implementation "org.flywaydb:flyway-core"
+    implementation "org.flywaydb:flyway-database-postgresql"
 	implementation project(':r2dbc-postgresql')
     implementation project(':model')
     implementation project(':usecase')
     implementation 'org.springframework.boot:spring-boot-starter'
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
+    runtimeOnly  "org.postgresql:postgresql"
     testImplementation 'com.tngtech.archunit:archunit:1.4.1'
     testImplementation 'com.fasterxml.jackson.core:jackson-databind'
 }
