--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,7 @@ include ':reactive-web'
 project(':reactive-web').projectDir = file('./infrastructure/entry-points/reactive-web')
 include ':webclient'
 project(':webclient').projectDir = file('./infrastructure/driven-adapters/webclient')
+include ':metrics'
+project(':metrics').projectDir = file('./infrastructure/helpers/metrics')
+include ':sqs-sender'
+project(':sqs-sender').projectDir = file('./infrastructure/driven-adapters/sqs-sender')
