HU-07-Debt-Capacity
The logic is generated so that when the type of credit requested has automatic validation activated, a message is sent via SQS to the debt capacity lambda and all the required calculations are made to determine whether or not to accept the credit request, changing the status through a request to the loan microservice.

--- a/applications/app-service/src/main/resources/application-docker.yml
+++ b/applications/app-service/src/main/resources/application-docker.yml
@@ -28,4 +28,5 @@ adapters:
 adapter:
   sqs:
     region: ${AWS_REGION:us-east-2}
-    queueUrl: ${SQS_QUEUE_URL:http://localhost:4566/000000000000/sample}
+    queueUrlNotification: ${AWS_SQS_QUEUE_URL_NOTIFICATION:https://sqs.us-east-2.amazonaws.com/328764941205/NOTIFICATION}
+    queueUrlDebtCapacity: ${AWS_SQS_QUEUE_URL_DEBT_CAPACITY:https://sqs.us-east-2.amazonaws.com/328764941205/DebtCapacity}
