--- a/infrastructure/driven-adapters/sqs-sender/build.gradle
+++ b/infrastructure/driven-adapters/sqs-sender/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-autoconfigure'
     implementation 'org.apache.logging.log4j:log4j-api'
     implementation 'software.amazon.awssdk:sqs'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
